removed inline css from prev practices

--- a/Exercises/2021-01-08/extra-4/index.html
+++ b/Exercises/2021-01-08/extra-4/index.html
@@ -9,9 +9,9 @@
 <body>
     <table>
         <tr>
-            <th scope="col" style="min-width: 450px;">Heading 1</th>
+            <th scope="col" class="head-1">Heading 1</th>
             <th scope="col">Heading 2</th>
-            <th scope="col" style="min-width: 200px;">Heading 3</th>
+            <th scope="col" class="head-3">Heading 3</th>
         </tr>
         <tr class="v-top">
             <td class="tx-center">cell 1 text</td>
@@ -34,8 +34,8 @@
         <tr>
             <td>Things to do today</td>
             <td rowspan="5">
-                <p class="tx-center tx-bold tx-vert" style="margin: auto;">
-                    WEEK <span style="writing-mode: horizontal-tb;">26</span>
+                <p class="tx-center tx-bold tx-vert m-auto">
+                    WEEK <span class="tx-horz">26</span>
                 </p>
             </td>
             <td>Monday</td>
