--- a/Exercises/2021-01-08/practice-1/index.html
+++ b/Exercises/2021-01-08/practice-1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="text-align: center;">Koenigsegg Gemera</h1>
+    <h1>Koenigsegg Gemera</h1>
     <div class="card-container">
       <div class="card">
         <div>
