--- a/Practice/2021-01-13/content-security-policy/index.html
+++ b/Practice/2021-01-13/content-security-policy/index.html
@@ -8,7 +8,7 @@
         content="default-src 'self';
                  img-src 'self' https://www.koenigsegg.com">
   <title>Content security policy</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/csp.css">
 </head>
 <body>
   <div>
