html practice update

--- a/Exercises/2021-01-15/practice-5/index.html
+++ b/Exercises/2021-01-15/practice-5/index.html
@@ -82,7 +82,7 @@
                 <td>unknown</td>
                 <td>Optic Nerve Atrophy <a href="#">ChiCTR-TNRC-11001491</a></td>
             </tr>
-            <tr>
+            <tr class="grp-1">
                 <th scope="row">Interventional Stem Cell Corp. (ISCO)</th>
                 <td>CytoCor-
                     <ul>
@@ -90,10 +90,15 @@
                         <li>Sankara Nethralaya - India</li>
                         <li>Automation Partnership - UK</li>
                     </ul>
-                    CytoRet - UC Irvin
                 </td>
-                <td>hpSCs<br>hpSCs</td>
-                <td>Corneal tissue for transplantation into degenrated corneas<br>REP cells and layered retinal structures for AMD</td>
+                <td>hpSCs</td>
+                <td>Corneal tissue for transplantation into degenrated corneas</td>
+            </tr>
+            <tr class="grp-1">
+                <th scope="row"></th>
+                <td>CytoRet - UC Irvin</td>
+                <td>hpSCs</td>
+                <td>REP cells and layered retinal structures for AMD</td>
             </tr>
         </tbody>
     </table>
