Hourly Update 2 (12:45) : finished with html/css, Added login, register, add user functionalities

--- a/core_js/dashboard.html
+++ b/core_js/dashboard.html
@@ -35,7 +35,7 @@
         </div>
         <div class="birthdays-container">
             <ul id="birthdays">
-                <li>Today is 'ABC' Birthday.</li>
+                <!-- <li>Today is 'ABC' Birthday.</li> -->
             </ul>
         </div>
     </main>
