--- a/core_js/register.html
+++ b/core_js/register.html
@@ -39,7 +39,7 @@
                 <select class="form-control" name="city" id="city">
                     <option value="">SELECT CITY</option>
                     <option value="Ahmedabad">Ahmedabad</option>
-                    <!-- i'm not going to add more -->
+                    <!-- i'm not going to add more (for now atleast) -->
                 </select>
                 <p class="err-msg"></p>
             </div>
