Hourly Update 3 (01:50) : finished rest of functionalities, taking lunch break now

--- a/core_js/register.html
+++ b/core_js/register.html
@@ -31,7 +31,7 @@
                 <select class="form-control" name="state" id="state">
                     <option value="">SELECT STATE</option>
                     <option value="Gujarat">Gujarat</option>
-                    <!-- i'm not going to add more -->
+                    <!-- will add more after lunch break -->
                 </select>
                 <p class="err-msg"></p>
             </div>
@@ -39,7 +39,7 @@
                 <select class="form-control" name="city" id="city">
                     <option value="">SELECT CITY</option>
                     <option value="Ahmedabad">Ahmedabad</option>
-                    <!-- i'm not going to add more (for now atleast) -->
+                    <!-- will add more after lunch break -->
                 </select>
                 <p class="err-msg"></p>
             </div>
