Hourly Update 5 (04:45) : some bug fixes, added cancel button and a loading screen

--- a/core_js/login.html
+++ b/core_js/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
+    <div class="loading-screen"><div class="loader">Loading...</div></div>
     <div class="wrapper">
         <h2>Login</h2>
         <form action="" id="login-form">
