--- a/core_js/subuser.html
+++ b/core_js/subuser.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/subuser.css">
 </head>
 <body>
+    <div class="loading-screen"><div class="loader">Loading...</div></div>
     <nav>
         <h3 class="greeting">Hello, [name]</h3>
         <ul>
