--- a/core_js/register.html
+++ b/core_js/register.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
+    <div class="loading-screen"><div class="loader">Loading...</div></div>
     <div class="wrapper">
         <h2>Registration</h2>
         <form action="" id="registration-form">
