--- a/core_js/users.html
+++ b/core_js/users.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/users.css">
 </head>
 <body>
+    <div class="loading-screen"><div class="loader">Loading...</div></div>
     <nav>
         <h3 class="greeting">Hello, [name]</h3>
         <ul>
@@ -41,6 +42,7 @@
                 </div>
             </div>
             <button id="user-form-btn">Add User</button>
+            <button id="cancel-btn" class="hidden">Cancel</button>
         </form>
         <h2>User List</h2>
         <table id="user-table">
